[project]
name = "mushroll_payment"
version = "0.1.0"
description = "Fake payment service for internal casino use"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "sqlalchemy>=2.0",
    "asyncpg",
    "pydantic>=2.0",
    "faststream[rabbitmq]>=0.4.6",
    "ruff>=0.11.9",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "mushroll_shared @ git+https://github.com/MushySoft/mushroll_shared@main"
]

[tool.ruff]
select = ["E", "F", "I", "N", "UP"]
line-length = 100

[tool.mypy]
strict = true
ignore_missing_imports = true
